# zsh_history_cleaner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
include/zsh_history_cleaner/: Constants.h  HistoryCleaner.h  SecureDelete.h  Utils.h
src/: main.cpp
src/core/: HistoryCleaner.cpp  SecureDelete.cpp
src/utils/: Utils.cpp
